--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Bem-vindo ao TabNews! Este é um site focado na comunidade da área de tecnologia, destinado a debates e troca de conhecimentos por meio de publicações e comentários criados pelos próprios usuários.",
   "main": "index.js",
   "scripts": {
-    "dev" : "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT",
@@ -12,5 +14,8 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
